Add FSpec as a sumbmodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "InitialAccess/Dovetail"]
 	path = InitialAccess/Dovetail
 	url = https://github.com/Altoid0/Dovetail.git
+[submodule "PostExploitation/FSpec"]
+	path = PostExploitation/FSpec
+	url = https://github.com/Altoid0/FSpec.git
